--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "semantic-ui-vue": "^0.1.7",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
