--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.17.1",
     "semantic-ui-vue": "^0.1.7",
     "vue": "^2.5.2",
+    "vue-notification": "^1.3.6",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
