--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "element-ui": "^2.1.0",
     "semantic-ui-vue": "^0.1.7",
     "vue": "^2.5.2",
+    "vue-cookie": "^1.1.4",
+    "vue-data-tables": "^3.1.3",
     "vue-notification": "^1.3.6",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
