--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue-cookie": "^1.1.4",
     "vue-data-tables": "^3.1.3",
     "vue-notification": "^1.3.6",
+    "vue-progressbar": "^0.7.3",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
