--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^0.17.1",
     "element-ui": "^2.1.0",
+    "jsonwebtoken": "^8.1.1",
     "moment": "^2.20.1",
     "semantic-ui-vue": "^0.1.7",
     "vue": "^2.5.2",
